# pimsclient

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: check_identity_existence.py  interact_with_server.py  log_in_quick.py  log_in_with_certificate.py  pseudonymize_reidentify.py  pseudonymize_reidentify_accessionnumber.py  pseudonymize_reidentify_with_keyfile.py  pseudonymize_reidentify_with_project.py  set_pseudonyms_manually.py
pimsclient/: __init__.py  client.py  core.py  exceptions.py  keyfile.py  logs.py  server.py  swagger.py
pimsclient/auth/: exceptions.py  msal.py  ntlm.py
pimsclient/autogen/: __init__.py  swagger_models_v0.py
tests/: .codeclimate.yml  conftest.py  factories.py  mock_responses.py  test_auth_msal.py  test_client.py  test_core.py  test_keyfile.py  test_pimsclient.py  test_server.py  test_swagger.py  try.py
tools/: README.md
tools/resources/: pims_openapi_def_v0.json
